--- a/res/layout/activity_srtview.xml
+++ b/res/layout/activity_srtview.xml
@@ -4,55 +4,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-	>
+    android:padding="16dp" >
 
     <TextView
         android:id="@+id/chs_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:minLines="2"
         android:maxLines="5"
-        android:text="Hi 我是百度语音合成，请输入要合成的英文语音内容" />
+        android:minLines="2"
+        android:text="Hi 我是百度语音合成，请输入要合成的英文语音内容"
+        android:textColor="@color/black"
+        android:textSize="25dip" />
+
     <TextView
         android:id="@+id/eng_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:minLines="2"
         android:maxLines="5"
-        android:text="Hi 我是百度语音合成，请输入要合成的中文语音内容" />
-    
+        android:minLines="2"
+        android:text="Hi 我是百度语音合成，请输入要合成的中文语音内容"
+        android:textColor="@color/black"
+        android:textSize="25dip" />
+
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-	>
-	
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
         <Button
-        android:id="@+id/pre_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="上一条" />
+            android:id="@+id/pre_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="上一条" />
+
         <Button
-        android:id="@+id/next_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="下一条" />
-    <Button
-        android:id="@+id/btn_speak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="播放" />
-    <Button
-        android:id="@+id/btn_rec"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Rec" />
+            android:id="@+id/next_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="下一条" />
+
+        <Button
+            android:id="@+id/btn_speak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="播放" />
+
+        <Button
+            android:id="@+id/btn_rec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Rec" />
     </LinearLayout>
+
 </LinearLayout>
