--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,12 @@
         android:layout_gravity="center"
         android:text="拼音浏览" />
     <Button
+        android:id="@+id/btn_recword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="课文跟读" />
+    <Button
         android:id="@+id/btn_tts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
