--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     android:padding="16dp" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center">
     <Button
         android:id="@+id/btn_bihua"
         android:layout_width="100dp"
@@ -60,7 +65,15 @@
         android:textColor="@color/white"
         android:textSize="@dimen/dimen_15_dip"
         android:textStyle="bold" />
-
+    </LinearLayout>
+    
+ <LinearLayout
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_15_dip"
+    
+    android:orientation="horizontal"
+    android:gravity="center">
     <Button
         android:id="@+id/btn_srt"
         android:layout_width="100dp"
@@ -96,7 +109,15 @@
         android:textColor="@color/white"
         android:textSize="@dimen/dimen_15_dip"
         android:textStyle="bold" />
+    </LinearLayout>
 
+  <LinearLayout
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dimen_15_dip"
+    
+    android:gravity="center">
     <Button
         android:id="@+id/btn_fanyi"
         android:layout_width="100dp"
@@ -132,5 +153,6 @@
         android:textColor="@color/white"
         android:textSize="@dimen/dimen_15_dip"
         android:textStyle="bold" />
+    </LinearLayout>
 
 </LinearLayout>
