加入搜索的列表显示, 同时开发点击列表的对话框

--- a/res/layout/activity_srt.xml
+++ b/res/layout/activity_srt.xml
@@ -192,7 +192,7 @@
         android:layout_marginTop="3dp"
         android:maxLines="2"
         android:singleLine="false"
-        android:textColor="#820072"
+        android:textColor="@color/purple"
         android:textSize="40dp" />
 
     <TextView
@@ -203,7 +203,7 @@
         android:layout_marginTop="3dp"
         android:maxLines="2"
         android:singleLine="false"
-        android:textColor="#820072"
+        android:textColor="@color/purple"
         android:textSize="40dp" />
 
 </LinearLayout>
