--- a/res/layout/activity_srtsearch.xml
+++ b/res/layout/activity_srtsearch.xml
@@ -4,10 +4,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/tvSearchDialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15dip"
+        android:textColor="@color/black"
+        android:layout_marginLeft="@dimen/dimen_5_dip"
+        android:layout_marginTop="@dimen/dimen_10_dip" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimen_15_dip"
+        android:layout_marginTop="@dimen/dimen_5_dip"
         android:gravity="center"
         android:orientation="horizontal" >
 
@@ -33,5 +42,12 @@
             android:textSize="@dimen/dimen_15_dip"
             android:textStyle="bold" />
     </LinearLayout>
+    
+    <ListView 
+         android:id="@+id/lvSrtSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:dividerHeight="3dip"
+        ></ListView>
 
 </LinearLayout>
