废除掉原有的滑屏体系,重建Ctrlable系列的滑屏

--- a/res/layout/activity_srtview.xml
+++ b/res/layout/activity_srtview.xml
@@ -139,6 +139,23 @@
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_15_dip"
             android:textStyle="bold" />
+         <Button
+            android:id="@+id/btnSrtSrh"
+            android:layout_width="60dp"
+            android:layout_height="@dimen/dimen_60_dip"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/dimen_5_dip"
+            android:background="@drawable/main_add_expense_quickly_new"
+            android:gravity="center"
+            android:paddingBottom="@dimen/dimen_6_dip"
+            android:shadowColor="@color/black"
+            android:shadowDx="0.0"
+            android:shadowDy="2.0"
+            android:shadowRadius="1.0"
+            android:text="查字幕"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_15_dip"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
