--- a/res/layout/common_wdailog.xml
+++ b/res/layout/common_wdailog.xml
@@ -12,17 +12,18 @@
 
         <TextView
             android:id="@+id/tvEpidoseInfo"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/yellow"
-            android:textSize="25dip" />
+            android:singleLine="false"
+            android:textSize="20dip" />
 
         <TextView
             android:id="@+id/tvTimeLine"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/yellow"
-            android:textSize="25dip" />
+            android:textSize="20dip" />
     </LinearLayout>
 
 </LinearLayout>
