--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -27,9 +27,10 @@
         <!-- 边框 -->
         <item name="android:windowFrame">@null</item>
 
-        <!-- 背景透明 -->
+        <!-- 背景透明 
         <item name="android:windowBackground">@color/transparent</item>
-
+-->
+		<item name="android:windowBackground">@color/black_50</item>
         <!-- 无标题 -->
         <item name="android:windowNoTitle">true</item>
 
