--- a/res/layout/lv_item_srtsearch.xml
+++ b/res/layout/lv_item_srtsearch.xml
@@ -6,20 +6,20 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tvEng"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFFFF"
             android:textSize="25dip" />
 
         <TextView
             android:id="@+id/evChs"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFFFF"
             android:textSize="25dip" />
