--- a/res/layout/activity_srt.xml
+++ b/res/layout/activity_srt.xml
@@ -159,7 +159,7 @@
         android:layout_gravity="center" >
 
         <ImageButton
-            android:id="@+id/starBtn"
+            android:id="@+id/btnStar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#00000000"
