--- a/res/layout/activity_videotest.xml
+++ b/res/layout/activity_videotest.xml
@@ -44,7 +44,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="重播" />
+            android:text="重播单句" />
+        
+         <Button
+            android:id="@+id/button_replay_custom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="高级重播" />
     </LinearLayout>
 
     <TextView
